botpress-postgress-main/k8/botpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botpress-deployment-prueba
  namespace: default
  labels:
    app: botpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botpress
  template:
    metadata:
      labels:
        app: botpress
    spec:
      containers:
      - name: botpress
        image: botpress-cicd
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
