botpress-postgress-main/k8/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment-prueba
  namespace: default
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:      
      containers:
      - name: postgres
        image: postgres:9.6.5
        ports:
          - containerPort: 5432
